# opentelemetry-rust-instrumentation

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
cli/src/: main.rs
docs/: how-it-works.md
docs/design/: context-propagation.md  manual-instrumentation.md
docs/getting-started/: README.md
docs/getting-started/rust-microservice/: instrumented.yaml  jaeger.yaml
include/: arguments.h  common.h  rust_context.h  span_context.h  utils.h
pkg/inject/: offset_results.json
pkg/instrumentors/bpf/hyper/bpf/: probe.bpf.c
pkg/instrumentors/bpf/tonic/bpf/: probe.bpf.c
