[package]
name = "opentelemetry-rust-instrumentation"
version = "0.1.0"
edition = "2021"
authors = ["OpenTelemetry Authors"]
license = "Apache-2.0"
description = "OpenTelemetry Auto-Instrumentation for Rust using eBPF"
repository = "https://github.com/open-telemetry/opentelemetry-rust-instrumentation"
keywords = ["opentelemetry", "tracing", "ebpf", "instrumentation", "observability"]
categories = ["development-tools::debugging", "development-tools::profiling"]
rust-version = "1.70"

[dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
bytes = "1.5"
clap = { version = "4.4", features = ["derive", "env"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
object = { version = "0.38", features = ["read", "std"] }
rustc-demangle = "0.1"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full", "signal"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.27", features = ["process", "ptrace"] }
goblin = "0.8"
gimli = "0.28"
memmap2 = "0.9"
procfs = "0.16"
notify = "6.1"
async-trait = "0.1"

[build-dependencies]
aya-build = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "otel-rust-agent"
path = "cli/src/main.rs"

[workspace]
members = [
    ".",
    "pkg/instrumentors/bpf/hyper",
    "pkg/instrumentors/bpf/tonic",
    "pkg/instrumentors/bpf/reqwest",
    "pkg/instrumentors/bpf/axum",
]

